--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ exclude: ['/automation/', 'README.md', 'LICENSE.txt', 'CNAME']
 title: "GDG Kolkata"
 email: "devfest@gdg.org.ua"
 description: "Google Developer Group Kolkata - Open and Collaborative community for professional and student developers in Kolkata."
-baseurl: "/zeppelin"
+baseurl: ""
 url: "http://gdg-x.github.io"
 permalink: "/blog/:title"
 googleAnalyticsTrackingId: "UA-43643469-5"
